amend changes for customuserdetail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.open-in-view=false
 app.jwtSecret=JWTSuperSecretKey
 
 ################### JavaMail Configuration ##########################
-support.email=akshaygudadhecompengg@gmail.com
+support.email=
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.protocol=smtps
